@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20171024] [svn: r725]
+Changelog for sg3_utils-1.43 [20171025] [svn: r726]
   - sg_bg_ctl: new Background control command (sbc4r08)
   - sg_write_atomic: new 16 and 32 byte cdbs (sbc4r04)
     - also can issue plain WRITE(16 or 32)
@@ -66,6 +66,7 @@ Changelog for sg3_utils-1.43 [20171024] [svn: r725]
     - decode response's RTP and two more provisioning
       statuses and the additional status (sbc4r12)
     - decode completion condition (sbc4r14)
+  - sg_modes: add Out of band management control mpage
   - manpages and usage messages: corrections from
     Gris Ge via github
   - group_number: is 6 bit field allowing 0 to 63,
